# nwb-healthstatus

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg  spec.yml
.datalad/: config
environments/: Dockerfile.pynwb-1.1.0  Dockerfile.pynwb-1.2.0  Dockerfile.pynwb-1.2.1  Dockerfile.pynwb-1.4.0  Dockerfile.pynwb-2.1.0  Dockerfile.pynwb-2.2.0  Dockerfile.pynwb-dev  Dockerfile.pynwb-latest  Dockerfile.spikeextractors-0.9.6  Dockerfile.spikeextractors-1.1.1
nwb_healthstatus/: __main__.py  base.py  spec.py
nwb_healthstatus/producers/core/: fleischmann.py  fleischmann_lab.py  simple1.py
nwb_healthstatus/producers/spikeextractors/: __init__.py  recording.py
secrets/: README.md  id_deploy  id_deploy.pub
