[metadata]
name = nwb-healthstatus
version = attr:nwb_healthstatus.__version__
#description =
#long_description = file:README.rst
#long_description_content_type = text/x-rst
author = DANDI developers
author_email = team@dandiarchive.org
license = Apache 2.0
license_files = LICENSE
url = https://github.com/dandi/nwb-healthstatus
#keywords =
#classifiers =

[options]
packages = find:
python_requires = ~=3.6
install_requires =
    appdirs
    click >= 7.0
    datalad
    deepmerge ~= 0.2.0
    hdmf
    lxml  # Needed by spikeextractors tests
    neo  # Needed by spikeextractors tests
    neurodocker
    pydantic ~= 1.7
    pyintan  # Needed by spikeextractors tests
    pynwb
    pyopenephys  # Needed by spikeextractors tests
    PyYAML
    spikeextractors

[options.entry_points]
console_scripts =
    nwb-healthstatus = nwb_healthstatus.__main__:main
